# meta-strategy

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  input.md  prompt.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: architect.agent.md  challenger.agent.md  ci-fixer.agent.md  code-developer.agent.md  copilot-customization-builder.agent.md  documentation-agent.agent.md  release-agent.agent.md  research-agent.agent.md  security-reviewer.agent.md  test-engineer.agent.md
.github/prompts/: architecture-review.prompt.md  code-review.prompt.md  create-pr.prompt.md  direction-gate.prompt.md  issue-triage.prompt.md  new-custom-agent.prompt.md  new-instructions-file.prompt.md  new-prompt-file.prompt.md  orchestrate-bugfix.prompt.md  orchestrate-feature.prompt.md  refine.prompt.md  release-check.prompt.md  sprint-planning.prompt.md  sprint-retro.prompt.md  sprint-review.prompt.md  sprint-start.prompt.md  subagent-dispatch.prompt.md  tdd-workflow.prompt.md  web-research.prompt.md  writing-plans.prompt.md
.github/skills/architecture-review/: SKILL.md
.github/skills/code-review/: SKILL.md
.github/skills/create-pr/: SKILL.md
.github/skills/direction-gate/: SKILL.md
.github/skills/issue-triage/: SKILL.md
.github/skills/new-custom-agent/: SKILL.md
.github/workflows/: ci.yml  release.yml.disabled
docs/: validation-report.html  validation-report.md
docs/architecture/: ADR.md
docs/constitution/: PHILOSOPHY.md  PROCESS.md
docs/research/: JOURNAL.md
docs/sprints/: SPRINT-LOG-TEMPLATE.md  sprint-1-log.md  sprint-10-log.md  sprint-11-log.md  sprint-2-log.md  sprint-3-log.md  sprint-4-log.md  sprint-5-log.md  sprint-6-log.md  sprint-7-log.md  sprint-8-log.md  sprint-9-log.md  velocity.md
scripts/: copilot-notify.sh
src/meta_strategy/: backtest.py  cli.py  engine.py  models.py  reports.py  risk.py  validator.py
strategies/: ai-bollinger-bands.pine  ai-bull-market-support-band.pine  ai-confluence.pine  ai-macd.pine  ai-rsi.pine  ai-supertrend.pine
strategies/definitions/: bollinger-bands.yml  bull-market-support-band.yml  confluence.yml  macd.yml  rsi.yml  supertrend.yml
strategies/indicators/: bollinger-bands.pine  bull-market-support-band.pine  confluence.pine  macd.pine  rsi.pine  supertrend.pine
strategies/output/: backtest-results.md
tests/: test_backtest.py  test_cli.py  test_engine.py  test_error_paths.py  test_integration.py  test_models.py  test_reports.py  test_risk.py  test_validator.py
(+14 files in other folders)
