[project]
name = "meta-strategy"
version = "0.3.0"
description = "AI-powered TradingView indicator-to-strategy converter using Pine Script v6"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "backtesting>=0.3.3",
    "yfinance>=0.2",
    "pandas>=2.0",
    "pandas-stubs[dev]>=3.0.0.260204",
    "types-pyyaml[dev]>=6.0.12.20250915",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "bandit>=1.7",
]

[project.scripts]
meta-strategy = "meta_strategy.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["backtesting.*", "yfinance.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.semantic_release]
version_variable = []
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
build_command = false
